syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package file;

service FileService {
    rpc Upload(stream UploadFileRequest) returns (File);
    rpc Download(DownloadFileRequest) returns (stream DownloadFileResponse);
    rpc Get(GetFileRequest) returns (File);
    rpc Find(FindFileRequest) returns (File);
    rpc GetAll(google.protobuf.Empty) returns (stream File); 
    rpc Delete(DeleteFileRequest) returns (google.protobuf.Empty);
    // rpc Move(MoveFileRequest) returns (File);
}

message UploadFileRequest {
    oneof upload {
        UploadInfo info = 1;
        bytes chunk = 2;
    }
}

message UploadInfo {
    string path = 1;
    string hash = 2;
    uint64 size = 3;
}

message DownloadFileRequest {
    string id = 1;
}

message DownloadFileResponse {
    bytes chunk = 1;
}

message GetFileRequest {
    string id = 1;
}

message FindFileRequest {
    string path = 1;
}

message DeleteFileRequest {
    string id = 1;
}

message MoveFileRequest {
    string id = 1;
    string parent_id = 2;
}

message File {
    string id = 1;
    string path = 2;
    string hash = 3;
    uint64 size = 4;
    google.protobuf.Timestamp created_at = 5;
    optional google.protobuf.Timestamp modified_at = 6;
}
